ressources/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html,
body {
    overflow-x: hidden;
}

html {
    font-family: 'Parkinsans', sans-serif;
    scroll-behavior: smooth;
}

body {
    background-color: black;
}

a {
    text-decoration: none;
    color: rgb(230, 240, 255);
}

header {
    background-color: rgba(2, 4, 5, 0.75);
    backdrop-filter: blur(20px);
    position: fixed;
    height: 100px;
    width: 100%;
    display: inline-flex;
    justify-content: space-between;
    align-items: center;
    transition: width 1.5s;
    z-index: 6;
    box-shadow: 0px 2px 2px black;
    opacity: 1;
}

header h2 a {
    display: block;
    padding-left: 5vw;
    font-size: 2rem;
    color: rgba(230, 240, 255, 1);
    opacity: 0;
    transition: opacity 1.5s;
    transition-delay: 800ms;
    font-weight: 400;
}

@media (hover: hover) {
    header h2 a:hover {
        color: rgba(55, 210, 230, 0.864);
        font-size: 2.2rem;
        transition-duration: 150ms;
        padding-left: 4.5vw;
    }
}

header h2 a:active {
    color: rgba(38, 142, 168, 0.811);
    font-size: 2.05rem;
    padding-left: 5vw;
}

/* Nav */

nav {
    display: flex;
    align-items: center;
    padding-right: 5vw;
    list-style-type: none;
    opacity: 0;
    transition: opacity 0.7s;
    transition-delay: 0.8s;
}

nav a {
    padding: 0px 1rem;
    font-size: 1.5rem;
}

nav a:hover {
    color: rgba(55, 210, 230, 0.864);
    font-size: 1.8rem;
    transition-duration: 150ms;
    padding: 0px 0.6rem;
}

nav a:active {
    color: rgba(38, 142, 168, 0.811);
    font-size: 1.55rem;
    padding: 0px 0.95rem;
}

#list-menu {
    width: 100px;
    position: fixed;
    right: 5vw;
    z-index: 6;
    display: none;
    font-size: 8rem;
    opacity: 0;
    transition: opacity 0.7s;
    transition-delay: 1s;
}

/* À-propos section */

.background {
    background-image: url('./img/altumcode-dMUt0X3f59Q-unsplash.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    background-position-x: 50%;
    height: 100vh;
    width: 100%;
    position: absolute;
    filter: brightness(65%) contrast(85%);
    z-index: 0;
    box-shadow: 2px 2px 10px Black;
}

.a-propos {
    display: flex;
    height: 100vh;
    width: 100%;
}

.présentation {
    width: 100%;

    transition: width 1.25s;
    color: rgb(200, 220, 240);
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: space-evenly;
    font-size: calc(1rem + 1vw);
    padding-top: 100px;
}

#Hi {
    color: transparent;
    opacity: 1;
}

#Hi {
    width: 0%;
    transition: width 0s, font-size 1.5s;
    text-align: center;
    background-color: rgba(2, 4, 5, 0.75);
    backdrop-filter: blur(10px);
    padding: 50px 10px;
    font-size: 0rem;
}

.présentation h1,
.présentation h2 {
    font-weight: 300;
}

/* Compétences section */

#compétences {
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    z-index: 2;
    padding-top: 50px;
    background-color: rgb(24, 28, 28);
    padding-bottom: 50px;
}

#compétences h2 {
    color: rgb(200, 220, 240);
    z-index: 3;
    text-align: center;
    font-size: calc(2rem + 1vw);
    padding-bottom: 30px;
}

.images-container {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    align-items: center;
    z-index: 3;
    padding: 0px 5%;
}

.images {
    width: 260px;
    padding: 50px 50px;
    filter: drop-shadow(4px 4px 4px);
    z-index: 4;
}

/* Projets section */

#projets {
    display: flex;
    flex-direction: column;
    justify-content: start;
    height: 100%;
    z-index: 1;
    padding-top: 50px;
    padding-bottom: 50px;
    background-color: rgb(5, 15, 13);
    box-shadow: 0px 0px 10px 2px black;
}

#projets h2 {
    color: white;
    z-index: 3;
    text-align: center;
    font-size: calc(2rem + 1vw);
    padding-bottom: 30px;
}

.projets-container {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
    align-items: center;
    z-index: 2;
}

.images2 h3,
.images2 p {
    color: white;
    text-align: center;
    padding-top: 25px;
}

.images2 h3 {
    font-size: 2rem;
}

.images2 {
    width: 400px;
    height: 400px;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    border: 1px solid white;
    padding: 15px;
    margin-bottom: 50px;
    margin-top: 30px;
    border-radius: 1rem;
}

.images2 img {
    width: 100%;
}

@media (hover: hover) {
    .images2:hover {
        width: 420px;
        height: 420px;
        margin-top: 20px;
        margin-bottom: 40px;
        transition-duration: 100ms;
        cursor: pointer;
        box-shadow: 2px 4px 25px rgb(115, 113, 173);
        ;
    }
}

.images2:active {
    width: 380px;
    height: 380px;
    box-shadow: 2px 2px 15px rgb(115, 113, 173);
    margin-left: 20px;
    margin-right: 20px;
}

/* Contact section */

#contact {
    background-color: black;
    color: rgb(200, 235, 240);

}

.coordonées {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
}

#contact h2 {
    text-align: center;
    font-size: calc(2rem + 1vw);
    padding: 30px 0px;
}

#contact p {
    font-size: 2rem;
    color: rgb(200, 235, 240);
    padding: 30px;
}

#contact a {
    color: white;
    text-decoration: underline;
    background-color: rgb(8, 25, 22);
    border-radius: 8px;
    padding: 10px;
}

@media (hover: hover) {
    #contact a:hover {
        font-size: 2rem;
        transition-duration: 100ms;
        box-shadow: 2px 4px 10px #020216;
        color: rgba(55, 210, 230, 0.864);
        padding: 20px;
        border-radius: 16px;
    }
}

#contact a:active {
    font-size: 1.8rem;
    color: rgba(38, 142, 168, 0.811);
    padding: 10px;
}

/* Media queries */

@media only screen and (min-width: 1280px) and (max-width: 1350px) {
    .images2 {
        margin: 30px 25px 50px 25px;
    }
}

@media only screen and (max-width: 950px) {
    nav {
        flex-direction: column;
        align-items: start;
        position: fixed;
        background-color: rgba(2, 4, 5, 0.75);
        backdrop-filter: blur(20px);
        opacity: 1;
        padding: 30px 30px 30px 30px;
        z-index: 7;
        box-shadow: 4px 4px 10px black;
        display: none;
        right: 0px;
        top: 100px;
    }

    nav a:hover {
        padding: 0px 1rem;
        font-size: 1.5rem;
    }

    nav a:active {
        padding: 0px 1rem;
        font-size: 1.5rem;
    }

    #backdropFilter {
        position: fixed;
        background: transparent;
        height: 195px;
        width: 260px;
        right: 0px;
        top: 100px;
        backdrop-filter: blur(20px);
        z-index: 4;
        display: none;
    }

    #list-menu {
        display: block;
    }

    #list-menu:hover {
        cursor: pointer;
        filter: opacity(0.5) drop-shadow(0 0 0 rgba(55, 210, 230, 1));
        width: 110px;
        right: 4.5vw;
    }

    #list-menu:active {
        filter: none;
        width: 100px;
        right: 5vw;
    }
}

@media only screen and (min-width: 850px) and (max-width: 950px) {
    .images2 {
        margin: 30px 25px 50px 25px;
    }
}

@media only screen and (max-width: 720px) {
    .images {
        padding: 50px 52px;
        width: 140px;
    }
}

@media only screen and (max-width: 700px) {
    header h2 a {
        font-size: 1.8rem;
        padding-left: 5vw;
        width: 140px;
    }

    header h2 a:active {
        padding-left: 5vw;
    }

    #list-menu {
        right: 5vw
    }

    #list-menu:hover {
        right: 4.5vw
    }

    #list-menu:active {
        right: 5vw
    }
}

@media only screen and (max-width: 450px) {
    .images {
        padding: 40px 15px;
    }

    .images2 {
        width: 350px;
        height: 350px;
    }

    .images2:active {
        width: 330px;
        height: 330px;
    }

    .images2 h3,
    .images2 p {
        padding: 0px;
    }

    .images2 p {
        font-size: 0.9rem;
    }

    #contact p {
        font-size: 1.5rem;
    }

    #contact a:active {
        font-size: 1.3rem;
    }
}

@media only screen and (max-width: 400px) {
    header h2 a {
        width: 90px;
    }

    nav {
        padding: 10px 10px 10px 10px;
    }

    nav a {
        font-size: 1.3rem;
    }

    nav a:hover {
        font-size: 1.3rem;
    }

    nav a:active {
        font-size: 1.3rem;
    }

    #backdropFilter {
        height: 138px;
        width: 200px;
    }

    .images2 {
        height: 320px;
        width: 280px;
        margin: 30px 0px 50px 0px;
    }

    .images2 h3 {
        font-size: 1.6rem;
    }
}

